<resources>
    <string name="delivery_history">Histórico de Delivery</string>
    <string name="chargeDelivery">Cargar al Delivery</string>
    <string name="chargeCustomer">Cargar al Cliente</string>
    <string name="txttelephone">Telephone</string>
    <string name="title_delivery">Delivery</string>
    <string name="add_delivery">Add Delivery</string>
    <string name="terms">Al accesar a esta aplicación usted está aceptando los</string>
    <string name="terms_and_conditions">Términos y condiciones.</string>
    <string name="terms_and_conditions_acceptance">Acepto los términos y condiciones.</string>
    <string name="loteria_number">Número</string>
    <string name="loteria_serie">Serie</string>
    <string name="loteria_fractions">Fracciones</string>
    <string name="recharges">Recargas</string>
    <string name="question_dialog">Esta seguro?</string>
    <string name="entervalue">Enter a value</string>
    <string name="app_name">MiCaja</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="img_content_desc"></string>
    <string name="text_from_strings">Text From Strings</string>
    <string name="hint_user_name">UserName</string>
    <string name="hint_password">Password</string>
    <string name="login">Submit</string>
    <string name="fileds_not_blank">Fields should not be blank</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="english">English</string>
    <string name="spanish">Español</string>
    <string name="portuguese">Português</string>
    <string name="debt">Debt</string>
    <string name="select_language">Select Language</string>
    <string name="hint_search">Search</string>
    <string name="back">Back</string>
    <string name="exitmsg">Press again back to exit</string>
    <string name="user_login_per">Sorry you do not have Permission</string>
    <string name="go">Go</string>
    <string name="shopopne">Store Open</string>
    <string name="shopclose">Store Closed</string>
    <string name="client">Clients</string>
    <string name="suppliers">Suppliers</string>
    <string name="inventory">Inventory</string>
    <string name="cash">Cash</string>
    <string name="sales">Sales</string>
    <string name="orders">Orders</string>
    <string name="reports">Reports</string>
    <string name="promotions">Promotions</string>
    <string name="menus">Menus</string>
    <string name="menu_name_exist">Name exists Menu. Please enter another name Menu</string>
    <string name="dish_name_exist">Name exists Dish. Please enter another name Dish</string>
    <string name="information">Information</string>
    <string name="recharge">Recharges</string>
    <string name="box">Box</string>
    <string name="c_banking">Correspondent Banking</string>
    <string name="cabin_calls">Cabin Calls</string>
    <string name="micro_insurance">Micro Insurance</string>
    <string name="micro_credit">Micro Credit</string>
    <string name="pa_quetiogs">Paquetigos</string>
    <string name="password">Password</string>
    <string name="title_client">Clients</string>
    <string name="name">Name *:</string>
    <string name="txtname">Name </string>
    <string name="payment">Payment Button</string>
    <string name="date">Date</string>
    <string name="pay">Pay</string>
    <string name="lendmoney">Lend Money</string>
    <string name="email">Email Address</string>
    <string name="email_title">Email</string>
    <string name="edit">Edit</string>
    <string name="add_client">Add Client</string>
    <string name="identitynum">ID *:</string>
    <string name="telephone">Phone Number*:</string>
    <string name="address">Address *: </string>
    <string name="txtemail">Email Address:</string>
    <string name="gender">Gender *:</string>
    <string name="btn_add">Submit</string>
    <string name="btn_close">Close Shop</string>
    <string name="btn_cancel">Cancel</string>
    <string name="history">History</string>
    <string name="spn_select">Sort By</string>
    <string name="spn_date">Sort by date</string>
    <string name="spn_payment">Sort by payment</string>
    <string name="search_warning">Please search with minimum 3 characters</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="title_createclient">Client Information</string>
    <string name="select_gender">Select Gender</string>
    <string name="initialdebt">Initial Debt:</string>
    <string name="txt_initialdebt">Initial Debt</string>
    <string name="actualdebt">Actual Debt:</string>
    <string name="txt_actualdebt">Actual Debt</string>
    <string name="pay_title">Register Feed Debt</string>
    <string name="balance">Balance</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_client">Edit Client</string>
    <string name="client_history">Client History</string>
    <string name="pay_warn_msg">Please enter valid amount</string>
    <string name="validate_fileds">Please enter mandatory fields</string>
    <string name="txt_amount">Amount:</string>
    <string name="client_debt_pay">Payment</string>
    <string name="update_msg">Updated Successfully</string>
    <string name="lendmoney_pay">Lend Money</string>
    <string name="title_suppliers">Suppliers</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="edit_supplier">Edit Supplier</string>
    <string name="label_supp_header">Provider Information</string>
    <string name="supp_name">Supplier Name:*</string>
    <string name="supp_nit">NIT:*</string>
    <string name="supp_businessdays">Visit Days:*</string>
    <string name="supp_freq_visit">Frequency Visit:*</string>
    <string name="weekly">Weekly</string>
    <string name="fortnightly">Fortnightly</string>
    <string name="monthly">Monthly</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="confirm">Confirm</string>
    <string name="fail">Fail</string>
    <string name="failure">Failure</string>
    <string name="save_messgae">Do you want to save the selected data.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="added_success">Successfully Added</string>
    <string name="updated_success">Actualización Correcta</string>
    <string name="not_added">Not Added. Please Check</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wedneday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="nodata">No Data</string>
    <string name="week_mon">M</string>
    <string name="week_tue">T</string>
    <string name="week_wed">W</string>
    <string name="week_thu">T</string>
    <string name="week_fri">F</string>
    <string name="week_sat">S</string>
    <string name="week_sun">S</string>
    <string name="contactname">Contact Name:</string>
    <string name="contactnum">Contact Number:</string>
    <string name="select">Select</string>
    <string name="select_freqvisit">Select Frequency Visit</string>
    <string name="select_days">Select visiting Days</string>
    <string name="title_shopopen">Shop Open or Close</string>
    <string name="shop_decription">Description Movement</string>
    <string name="shop_income">Income</string>
    <string name="shop_expenses">Expenses</string>
    <string name="shop_datetime">Date\u0026Time:</string>
    <string name="hour">Hour</string>
    <string name="shop_dialog_title">Money Box</string>
    <string name="openingbal">Opening Balance</string>
    <string name="cashsales">Cash Sales</string>
    <string name="cardsales">Card Sales</string>
    <string name="deposits">Deposits</string>
    <string name="payments">Payments</string>
    <string name="cashpurchases">Cash Purchases</string>
    <string name="creditpurchases">Credit Purchases</string>
    <string name="withdrawls">Withdrawls</string>
    <string name="total">Total</string>
    <string name="totalcash">Total Cash</string>
    <string name="finalbalance">Final Balance</string>
    <string name="closebalance">Closing Balance</string>
    <string name="close_dialog_title">Confirmation</string>
    <string name="close_msg">Do you want to close shop</string>
    <string name="close_success">Shop was closed successfully</string>
    <string name="network_msg">Network is not available Please check your connection</string>
    <string name="network_sync_msg">Data is not Registered in server please check your network connection</string>
    <string name="sync_error_msg">Unable to sync</string>
    <string name="shop_name_label">Establishment : </string>
    <string name="shop_date_label">Opened Date : </string>
    <string name="duplicate_records">Duplicate Record</string>
    <string name="customer_duplicate_record_start">The customer with id</string>
    <string name="customer_duplicate_record_end">already exists in the store</string>
    <string name="title_cash">Cash</string>
    <string name="cash_moneybox">Money Box</string>
    <string name="cash_type">Type</string>
    <string name="cash_decription">Payment of Client</string>
    <string name="cash_datetime">Date\u0026Time</string>
    <string name="cash_valuemovement">Value Movement</string>
    <string name="btn_cashWithdraw">Cash Withdraw</string>
    <string name="btn_cashdeposit">Cash Deposit</string>
    <string name="cash_storeopen">Store Opening</string>
    <string name="cash_withdrawl">Cash WithDraw</string>
    <string name="pay_clients">Pay Clients</string>
    <string name="cash_deposit">Down Payment</string>
    <string name="cash_orderbuy"> Effective Payment Order Buy</string>
    <string name="sale_clients">Sale Clients</string>
    <string name="cash_lend">Clinet Lend Money</string>
    <string name="cash_warn_msg">Please enter all the fields</string>
    <string name="title_inventory">Inventory</string>
    <string name="inv_productslist">Product Listings:</string>
    <string name="inv_provider">Provider</string>
    <string name="inv_adjustment">Inventory Adjustment</string>
    <string name="inv_history">History</string>
    <string name="inv_recieve">Receive</string>
    <string name="inv_quantity">Quantity</string>
    <string name="product">Product</string>
    <string name="inv_prodcode">Product Code</string>
    <string name="inv_prodrname">Product Name</string>
    <string name="inv_utilityvalue">Utility Value</string>
    <string name="adjustment">Adjustment</string>
    <string name="actual_quantity">Actual Quantity</string>
    <string name="physical_inventory">Physical Inventory</string>
    <string name="adjust">Adjust</string>
    <string name="spn_all">All</string>
    <string name="spn_exhausted">Exhausted</string>
    <string name="select_supplier">Select Supplier</string>
    <string name="select_provider">Seleccionar Proveedor</string>
    <string name="msg_supplier">Please select supplier</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">C</string>
    <string name="end_sale">Sale End</string>
    <string name="title_menus">Menus Dashboard</string>
    <string name="create_menus_item">Create Dish</string>
    <string name="create_menu">Create/Update Menu</string>
    <string name="menus_inventory">Inventory</string>
    <string name="others">Others</string>
    <string name="history_invoice">Invoice Number</string>
    <string name="history_amount">Quantity</string>
</resources>