<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
     android:background="@color/white_color"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/img_logo"
        style="@style/header_logo"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/img_content_desc"
        android:src="@drawable/m_sales" />

    <ImageView
        android:id="@+id/img_home"
        style="@style/header_home_icon"
        android:contentDescription="@string/img_content_desc"
        android:onClick="showMenuScreen"
        android:src="@drawable/bhome_icon" />

    <TextView
        android:id="@+id/txt_HeaderTitle"
        style="@style/header_title"
        android:layout_width="150dp"
        android:layout_toLeftOf="@+id/spn_MenusFilter"
        android:layout_toRightOf="@+id/img_logo"
        android:text="@string/title_menus" 
        android:textColor="@color/sale_view"/>

    <Button
        style="@style/btn_header"
        android:layout_width="130dp"
        android:id="@+id/btn_CreateDish"
        android:layout_marginRight="1dp"
        android:layout_marginLeft="0dp"
        android:layout_margin="3dp"
        android:layout_toLeftOf="@+id/img_home"
        android:background="@drawable/orders_header_btn_bg"
        android:layout_centerVertical="true"
        android:text="@string/create_menus_item" />

    <Button
        style="@style/btn_header"
        android:layout_width="130dp"
        android:id="@+id/btn_CreateMenus"
        android:layout_margin="3dp"
        android:layout_marginRight="1dp"
        android:layout_toLeftOf="@+id/btn_CreateDish"
        android:layout_centerVertical="true"
        android:background="@drawable/orders_header_btn_bg"
        android:text="@string/create_menu" />
    
    <Button
        style="@style/btn_header"
        android:layout_width="130dp"
        android:id="@+id/btn_MenuInvantory"
        android:layout_margin="3dp"
        android:layout_marginRight="1dp"
        android:layout_toLeftOf="@+id/btn_CreateMenus"
        android:background="@drawable/orders_header_btn_bg"
        android:layout_centerVertical="true"
        android:text="@string/menus_inventory" />

    <Spinner
        android:id="@+id/spn_MenusFilter"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="3dp"
        android:layout_marginRight="1dp"
        android:layout_toLeftOf="@+id/btn_MenuInvantory"
        android:background="@drawable/spn_filter_icon"
        android:paddingLeft="10dp"
        android:paddingRight="20dp" />

</RelativeLayout>