<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
   android:background="@color/white_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/pnl_header"
        layout="@layout/addclient_header_panel" />

    <TextView
        android:id="@+id/header_addClient"
        style="@style/inner_header_title"
        android:layout_below="@+id/pnl_header"
        android:background="@color/customer_tab"
        android:text="@string/title_createclient" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_btns"
        android:layout_below="@+id/header_addClient"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="2dp" >

                <TextView
                    style="@style/txt_client_add"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/etxt_clientName"
                    style="@style/etxt_client_add"
                    android:imeOptions="flagNoExtractUi"
                    android:maxLength="20" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal"
                android:padding="2dp" >

                <TextView
                    style="@style/txt_client_add"
                    android:layout_gravity="center_vertical"
                    android:text="@string/gender" />

                <RadioGroup
                    android:id="@+id/rg_gender"
                    style="@style/etxt_client_rg"
                    android:layout_gravity="center_horizontal"
                    android:imeOptions="flagNoExtractUi"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.15"
                        android:button="@drawable/radio_btn_bg"
                        android:tag="0"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.15"
                        android:button="@drawable/radio_btn_bg"
                        android:tag="1"
                        android:text="@string/female" />

                    <RadioButton
                        android:id="@+id/radio_Others"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@drawable/radio_btn_bg"
                        android:tag="2"
                        android:text="@string/others" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal"
                android:padding="2dp" >

                <TextView
                    style="@style/txt_client_add"
                    android:text="@string/identitynum" />

                <EditText
                    android:id="@+id/etxt_clientNit"
                    style="@style/etxt_client_add"
                    android:imeOptions="flagNoExtractUi"
                    android:maxLength="15"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal"
                android:padding="2dp" >

                <TextView
                    style="@style/txt_client_add"
                    android:text="@string/telephone" />

                <EditText
                    android:id="@+id/etxt_clientPhoneNum"
                    style="@style/etxt_client_add"
                    android:digits="0123456789"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="phone"
                    android:maxLength="10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal"
                android:padding="2dp" >

                <TextView
                    style="@style/txt_client_add"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/etxt_clientAddress"
                    style="@style/etxt_client_add"
                    android:imeOptions="flagNoExtractUi"
                    android:maxLength="100" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal"
                android:padding="2dp" >

                <TextView
                    style="@style/txt_client_add"
                    android:text="@string/txtemail" />

                <EditText
                    android:id="@+id/etxt_clientEmail"
                    style="@style/etxt_client_add"
                    android:imeOptions="flagNoExtractUi"
                    android:maxLength="50" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal"
                android:padding="2dp" >

                <TextView
                    style="@style/txt_client_add"
                    android:text="@string/initialdebt" />

                <EditText
                    android:id="@+id/etxt_initialDebt"
                    style="@style/etxt_client_add"
                    android:background="@drawable/etxt_bg"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="numberDecimal"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:text="0" >
                </EditText>
            </LinearLayout>

            <!--
            <TextView
                android:id="@+id/txt_balAmount"
                style="@style/txt_client_add"
                android:layout_marginTop="15dp"
                android:gravity="center" />
            -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal"
                android:padding="2dp" >

                <TextView
                    style="@style/txt_client_add"
                    android:text="@string/actualdebt" />

                <EditText
                    android:id="@+id/txt_balAmount"
                    style="@style/etxt_client_add"
                    android:background="@drawable/etxt_bg"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="numberDecimal"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:enabled="false"
                    android:text="0" >
                </EditText>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_btns"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp" >

        <Button
            android:id="@+id/btn_Submit"
            style="@style/btn_main"
            android:background="@drawable/cash_button"
            android:text="@string/save"
            android:textColor="@color/white_color" />

        <Button
            android:id="@+id/btn_Cancel"
            style="@style/btn_main"
            android:layout_marginLeft="20dp"
            android:background="@drawable/new_cancel"
            android:text="@string/btn_cancel"
            android:textColor="@color/white_color" />
    </LinearLayout>

    <include
        android:id="@+id/client_list_view"
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/header_addClient"
        layout="@layout/view_row" />

</RelativeLayout>